# croppy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.bat  run.py  run.sh  setup.py
croppy/: __init__.py  crop_manager.py  file_manager.py  image_handler.py  main.py  theme_manager.py  ui_components.py
